--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "test": "npm run lint && tap --100 test/*test.js test/*/*test.js && npm run test-types",
-    "test-ci": "npm run lint && tap test/*test.js test/*/*test.js --coverage-report=lcovonly && npm run test-types",
+    "test": "npm run lint && tap test/*test.js test/*/*test.js && npm run test-types",
+    "test-ci": "npm run lint && tap --no-check-coverage test/*test.js test/*/*test.js --coverage-report=lcovonly && npm run test-types",
     "test-types": "tsc && tsd",
     "cov-ui": "tap --coverage-report=html test/*test.js test/*/*test.js",
     "bench": "node benchmarks/utils/runbench all",
@@ -99,9 +99,12 @@
   "dependencies": {
     "fast-redact": "^3.0.0",
     "fast-safe-stringify": "^2.0.7",
+    "get-caller-file": "^2.0.5",
+    "pino-abstract-transport": "^0.2.0",
     "pino-std-serializers": "^4.0.0",
     "quick-format-unescaped": "^4.0.3",
-    "sonic-boom": "^2.0.1"
+    "sonic-boom": "^2.0.1",
+    "thread-stream": "^0.10.0"
   },
   "tsd": {
     "directory": "test/types"
