--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint .",
     "test": "npm run lint && tap test/*test.js test/*/*test.js && npm run test-types",
     "test-ci": "npm run lint && tap --no-check-coverage test/*test.js test/*/*test.js --coverage-report=lcovonly && npm run test-types",
-    "test-types": "tsc && tsd",
+    "test-types": "tsc && tsd && ts-node test/types/pino.ts",
     "cov-ui": "tap --coverage-report=html test/*test.js test/*/*test.js",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
@@ -64,7 +64,7 @@
   },
   "homepage": "http://getpino.io",
   "devDependencies": {
-    "@types/node": "^15.3.0",
+    "@types/node": "^15.14.1",
     "airtap": "4.0.3",
     "benchmark": "^2.1.4",
     "bole": "^4.0.0",
@@ -81,7 +81,7 @@
     "import-fresh": "^3.2.1",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
-    "pino-pretty": "^5.0.0",
+    "pino-pretty": "^5.1.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "pump": "^3.0.0",
@@ -92,8 +92,9 @@
     "tap": "^15.0.1",
     "tape": "^5.0.0",
     "through2": "^4.0.0",
-    "tsd": "^0.15.1",
-    "typescript": "^4.2.4",
+    "ts-node": "^10.0.0",
+    "tsd": "^0.17.0",
+    "typescript": "^4.3.5",
     "winston": "^3.3.3"
   },
   "dependencies": {
@@ -103,7 +104,7 @@
     "pino-abstract-transport": "^0.2.0",
     "pino-std-serializers": "^4.0.0",
     "quick-format-unescaped": "^4.0.3",
-    "sonic-boom": "^2.0.1",
+    "sonic-boom": "^2.1.0",
     "thread-stream": "^0.10.0"
   },
   "tsd": {
