--- a/package.json
+++ b/package.json
@@ -101,11 +101,12 @@
     "fast-redact": "^3.0.0",
     "fast-safe-stringify": "^2.0.7",
     "get-caller-file": "^2.0.5",
+    "on-exit-leak-free": "^0.1.0",
     "pino-abstract-transport": "^0.2.0",
     "pino-std-serializers": "^4.0.0",
     "quick-format-unescaped": "^4.0.3",
     "sonic-boom": "^2.1.0",
-    "thread-stream": "^0.10.0"
+    "thread-stream": "^0.11.0"
   },
   "tsd": {
     "directory": "test/types"
