--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "on-exit-leak-free": "^0.1.0",
     "pino-abstract-transport": "^0.2.0",
     "pino-std-serializers": "^4.0.0",
+    "json-stringify-safe": "^5.0.1",
     "quick-format-unescaped": "^4.0.3",
     "sonic-boom": "^2.1.0",
     "thread-stream": "^0.11.0"
