--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
   },
   "dependencies": {
     "fast-redact": "^3.0.0",
-    "safe-stable-stringify": "^1.0.0",
     "flatstr": "^1.0.12",
+    "json-stringify-safe": "^5.0.1",
     "pino-std-serializers": "^3.1.0",
     "quick-format-unescaped": "^4.0.3",
     "sonic-boom": "^1.0.2"
