--- a/.github/workflows/package-manager-ci.yml
+++ b/.github/workflows/package-manager-ci.yml
@@ -27,6 +27,8 @@ jobs:
         uses: pnpm/action-setup@v2.0.1
         with:
           version: ^6.0.0
+      - name: Install dependancies
+        run: pnpm install
       - name: Tests
         run: pnpm run test-ci
 
