--- a/.github/workflows/package-manager-ci.yml
+++ b/.github/workflows/package-manager-ci.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Use yarn
         run: |
           npm install -g yarn
-          yarn set version berry
+          yarn set version berry && yarn set version 2.4.2
+          echo "nodeLinker: node-modules" >> .yarnrc.yml
           yarn install
         env:
           # needed due the yarn.lock file in pino's .gitignore
