--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "import-fresh": "^3.2.1",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
+    "pino-elasticsearch": "^6.1.0",
     "pino-pretty": "^5.1.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
