--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "homepage": "http://getpino.io",
   "devDependencies": {
-    "@types/node": "^16.7.2",
+    "@types/node": "^16.7.10",
     "airtap": "4.0.3",
     "benchmark": "^2.1.4",
     "bole": "^4.0.0",
@@ -94,7 +94,7 @@
     "through2": "^4.0.0",
     "ts-node": "^10.2.1",
     "tsd": "^0.17.0",
-    "typescript": "^4.4.2",
+    "typescript": "4.4.2",
     "winston": "^3.3.3"
   },
   "dependencies": {
