--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "through2": "^4.0.0",
     "ts-node": "^10.2.1",
     "tsd": "^0.17.0",
-    "typescript": "4.4.2",
+    "typescript": "^4.4.2",
     "winston": "^3.3.3"
   },
   "dependencies": {
