--- a/.github/workflows/package-manager-ci.yml
+++ b/.github/workflows/package-manager-ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           npm install -g yarn
           yarn set version berry && yarn set version 2.4.2
-          echo "nodeLinker: node-modules" >> .yarnrc.yml
+          echo 'nodeLinker: node_modules >> .yarnrc.yml
           # see https://github.com/yarnpkg/berry/issues/2935#issuecomment-911299992
           yarn add --dev typescript@~4.3.2
           yarn install
@@ -58,10 +58,7 @@ jobs:
           # needed due the yarn.lock file in pino's .gitignore
           YARN_ENABLE_IMMUTABLE_INSTALLS: false
       - name: Tests
-        run: |
-          # yarn doesn't support ESM yet
-          mv ./test/esm/index.test.js ./test/esm/index.test.skip.js
-          yarn run test-ci
+        run: yarn run test-ci
 
   yarn-pnp:
     name: yarn-pnp package manager on ${{ matrix.node-version }} ${{ matrix.os }}
@@ -81,8 +78,13 @@ jobs:
         run: |
           npm install -g yarn
           yarn set version berry
-          echo "nodeLinker: pnp" >> .yarnrc.yml 
-          echo "pnpMode: loose" >> .yarnrc.yml 
+          echo 'nodeLinker: pnp
+          pnpMode: loose
+          packageExtensions:
+            debug@*:
+              dependencies:
+                supports-color: "*"
+          ' >> .yarnrc.yml
           yarn install
           yarn add --dev transport@link:./test/fixtures/transport
         env:
