--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "import-fresh": "^3.2.1",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
-    "pino-pretty": "^5.1.0",
+    "pino-pretty": "pinojs/pino-pretty#master",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "pump": "^3.0.0",
@@ -102,12 +102,12 @@
     "fast-safe-stringify": "^2.0.8",
     "fastify-warning": "^0.2.0",
     "get-caller-file": "^2.0.5",
+    "json-stringify-safe": "^5.0.1",
     "on-exit-leak-free": "^0.2.0",
     "pino-abstract-transport": "^0.2.0",
     "pino-std-serializers": "^4.0.0",
-    "json-stringify-safe": "^5.0.1",
     "quick-format-unescaped": "^4.0.3",
-    "sonic-boom": "^2.1.0",
+    "sonic-boom": "^2.2.1",
     "thread-stream": "^0.11.0"
   },
   "tsd": {
