--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "import-fresh": "^3.2.1",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
-    "pino-pretty": "pinojs/pino-pretty#master",
+    "pino-pretty": "^v7.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "pump": "^3.0.0",
