--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pino",
-  "version": "7.0.0-rc.9",
+  "version": "7.0.0",
   "description": "super fast, all natural json logger",
   "main": "pino.js",
   "type": "commonjs",
